# rkf78

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
benches/: integration.rs
docs/: algorithm.md  llm-context.md
examples/: event_detection.rs  gpu_two_body.rs  harmonic_oscillator.rs  two_body_orbit.rs
src/: coefficients.rs  events.rs  lib.rs  solver.rs
src/gpu/: buffers.rs  mod.rs  pipeline.rs  shader.wgsl  types.rs
tasks/: todo.md
tests/: gpu_integration.rs
